platform/tekton-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: Tekton
    hajimari.io/icon: robot-industrial
spec:
  ingressClassName: nginx
  rules:
    - host: &host tekton.example.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: tekton-tls-certificate
